# java-foreign-function-interface-example

./: .gitignore  README.md  build.gradle  settings.gradle
ffi-c/: build.gradle
ffi-c-native/: .gitignore  README.md  configure.ac
ffi-c-native/src/: Makefile.am  ffi.c  ffi.h
ffi-c/src/main/java/com/github/pattyshortcake/ffi/: FfiExample.java  NumberWrapper.java
ffi-c/src/test/java/com/github/pattyshortcake/ffi/: FfiExampleTest.java
ffi-cpp/: build.gradle
ffi-cpp-native/: README.md  configure.ac
ffi-cpp-native/src/: Ffi.cpp  Ffi.h  Makefile.am  c-function.c  ffi.cpp  ffi.h
ffi-cpp/src/main/java/com/github/pattyshortcake/ffi/: FfiCppExample.java
ffi-cpp/src/test/java/com/github/pattyshortcake/ffi/: FfiCppExampleTest.java
